# Real-time-2D-Object-Recognition

./: CMakeLists.txt  ReadME.md
include/: csv_util.h  features.h  processors.h
src/: csv_util.cpp  features.cpp  main.cpp  objectRecognizer.cpp  processors.cpp
